# link

./: Cargo.toml  README.md  TODO  kali-install.sh
cert/: cert.pem  key.pem
src/: main.rs
src/assets/: donut
src/assets/mimi/Win32/: mimidrv.sys
src/assets/mimi/x64/: mimidrv.sys
src/link/: Cargo.toml
src/link/src/: lib.rs  main.rs  nonstd.rs  stdlib.rs
src/links/linux/: Cargo.toml
src/links/linux/src/: stdlib.rs
src/links/osx/: Cargo.toml
src/links/osx/src/: main.rs  stdlib.rs
src/links/windows/: Cargo.toml  build.rs
src/links/windows/src/: evasion.rs  lib.rs  main.rs  nonstd.rs  stdlib.rs
src/models/: db.rs
src/routes/: urls.rs
src/server/: links.rs  mod.rs  server.rs  spawn.rs  tasks.rs
src/util/: cli.rs  donut.rs  generate.rs  mod.rs  nonstd.rs  sharp.rs  shellcode.rs
