[package]
name = "link"
version = "0.1.0"
authors = ["postrequest"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
uuid = { version = "0.4", features = ["v4"] }
chrono = "0.4"
serde = "1.0.118"
rustyline = "7.1.0"
log = "0.4.0"
env_logger = "0.8.2"
base64 = "0.13.0"
double-ratchet = "0.1"
#tui = "0.13"
#termion = "1.5"
#sqlx = { version = "0.4.0", default-features = false, features = ["runtime-actix-native-tls", "sqlite", "time"] }

